--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,9 +32,8 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/RealtimeDataPortal/RealtimeDataPortal.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "--project",
+                "${workspaceFolder}/RealtimeDataPortal/RealtimeDataPortal.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
