--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-apexcharts": "^1.3.9",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "reselect": "^4.1.5",
     "sass": "^1.45.1",
     "xlsx": "^0.17.5"
   },
