--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fabric": "^4.6.0",
     "fabricjs-react": "^1.0.8",
     "file-saver": "^2.0.5",
+    "imagetracerjs": "^1.2.6",
     "react-apexcharts": "^1.3.9",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
